--- a/src/gui/scss/Light.scss
+++ b/src/gui/scss/Light.scss
@@ -158,7 +158,7 @@ $effect-button-bg: #e8e8e8;
 $effect-button-hover-bg: #d8d8d8;
 $effect-button-icon-color: #555555;
 $effect-button-icon-hover-color: #000000;
-$effect-weight-panel-bg: #f5f5f5;
+$effect-bottom-panel-bg: #f5f5f5;
 $effect-add-btn-bg: rgba(0, 0, 0, 0.02);
 $effect-add-btn-border: rgba(0, 0, 0, 0.15);
 $effect-add-btn-hover-bg: rgba(0, 0, 0, 0.04);
@@ -178,6 +178,7 @@ $queue-duration-btn-bg: #f5f5f5;
 $queue-duration-btn-hover-bg: #eeeeee;
 $queue-duration-btn-text: #444444;
 $queue-duration-value-color: #000000;
+$effect-comment-bg: #fffbeb;
 
 // Import Core Styles
 @import './core/$importer';
