--- a/src/gui/scss/core/_bootstrap-overrides.scss
+++ b/src/gui/scss/core/_bootstrap-overrides.scss
@@ -51,6 +51,19 @@
     }
 }
 
+.sticky-bottom-element {
+    position: sticky;
+    bottom: 0;
+    z-index: 999;
+    &.is-stuck {
+        border-top: 1px solid #24262a;
+        margin-top: 10px;
+        box-shadow: 0 -6px 9px -2px #0000004d;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+}
+
 .effect-footer-sentinel,
 .fb-scroll-sentinel {
     width: 100%;
