--- a/src/gui/scss/Obsidian.scss
+++ b/src/gui/scss/Obsidian.scss
@@ -120,29 +120,28 @@ $sys-cmd-expanded-shadow: none;
 
 $integration-row-bg: #3e4046;
 
+/* controls */
+$primary-button-bg: #16809c;
+$primary-button-hover-bg: #1f849e;
+$link-button-color: #12d0ff;
+$link-button-hover-color: #11add4;
+
 /* Settings Page */
 $settings-sidebar-bg: #383a40;
 $settings-category-selected-bg: #2d3135;
 $settings-category-hover-bg: #33373c;
 
 /* effect & variable choosers */
-$effect-category-bg: $medium-background-color;
+$effect-category-bg: $light-background-color;
 $effect-category-hover-bg: #484a4d;
 $effect-category-selected-bg: #181a1d;
-$effect-def-bg: #43454a;
+$effect-def-bg: #2f2f32;
 $effect-def-hover-bg: #515357;
 $effect-def-selected-border: #767a81;
 $effect-def-selected-check: #2df92d;
-$effect-dialog-bg: #43454a;
 $variable-category-bg: #202124;
 $variable-magic-tooltip-fg: white;
 $variable-menu-bg: #18191b;
-
-/* controls */
-$primary-button-bg: #16809c;
-$primary-button-hover-bg: #1f849e;
-$link-button-color: #12d0ff;
-$link-button-hover-color: #11add4;
 
 /* effect-list */
 $effect-item-bg: #2f2f32;
